尾页文字动画

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,20 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos
+Popcorn/css/.../.../bg.png
+Popcorn/css/.../1.jpg
+Popcorn/css/.../m1.jpg
+Popcorn/css/.../m2.jpg
+Popcorn/css/.../m3.jpg
+Popcorn/css/.../m4.jpg
+Popcorn/css/.../m5.jpg
+Popcorn/css/.../m6.jpg
+Popcorn/css/.../p0.jpg
+Popcorn/css/.../p0.psd
+Popcorn/css/.../p1.jpg
+Popcorn/css/.../p2.jpg
+Popcorn/css/.../p3.jpg
+Popcorn/css/.../p4.jpg
+Popcorn/css/.../p5.jpg
+Popcorn/css/.../p6.jpg
+Popcorn/css/.../style.css
